# NEpak

./: Cargo.toml  README.md
src/: main.rs  ui.rs
src/gui/: app.rs  form.rs  jobs.rs  mod.rs  tabs.rs
src/gui/ui/: build.rs  extract.rs  list.rs  logs.rs  mod.rs  topbar.rs  verify.rs
src/pak/: build.rs  error.rs  format.rs  io.rs  mod.rs  ops.rs  path.rs  read.rs
